fix(multi-select-option-field): fix long unbroken text wrap on option labels

--- a/packages/components/src/MultiSelect/subcomponents/MultiSelectOptionField/MultiSelectOptionField.module.scss
+++ b/packages/components/src/MultiSelect/subcomponents/MultiSelectOptionField/MultiSelectOptionField.module.scss
@@ -56,6 +56,7 @@
   font-size: $typography-paragraph-body-font-size;
   line-height: $typography-paragraph-body-line-height;
   letter-spacing: $typography-paragraph-body-letter-spacing;
+  overflow-wrap: anywhere;
 
   // Increases the hit area of the checkbox label to the size of
   // the surrounding div for better mouse user experience
